
- probing.maxbadgesize = -1 : maximal number of probing candidates probed in a single badge of candidates (-1 deactivated)

### Data structures

Unit tests
----------

Testing
-------

Build system
------------

Fixed bugs
----------

Miscellaneous
-------------
- Providing a way to build PaPILO without TBB (warning parallel design can not be used anymore)
- Providing an interface to gurobi

Known bugs
----------

@page RN20 Release notes for PAPILO 2.0

@section RN201 PaPILO 2.0.1
***************************

Features
--------
Performance improvements
------------------------
Interface changes
-----------------
### Deleted and changed API methods
### New API functions
### Changed parameters
### New parameters with default values
### Data structures
Unit tests
----------
Testing
-------
Build system
------------
Fixed bugs
----------

- ParallelRowDetection: lhs is updated correctly
- fix fmt error: use correct amount of arguments for print statement
- copy extended_euclidean.hpp during installation
- fix bug in FindTBB module
- ranged rows in MPS Files can now be parsed if they are specified as 'E'
- postsolving FixInfinityCol works also in primal case
- PaPILO shows some behavior on different OS

Miscellaneous
-------------
Known bugs
----------

@section RN200 PaPILO 2.0.0
***************************

Features
--------

- supporting dual postsolving for presolvers: DomCol, Dualfix, SingletonCol, ParallelCol, ParallelRow, Propagation, FixContinuous, SingletonCol, SingletonStuffing
    - dual postsolve is activated if original problem has no integer variable
    - note to turn off componentsmaxint = -1 and presolve.detectlindep = 0
    - if calculate_basis_for_dual is activated (default), tightening the bounds (f.e. in Propagation and Dualfix) are avoided due to computional overhead to postsolve the basis information