@@ -45,6 +45,7 @@ Miscellaneous
 -------------
 - Providing a way to build PaPILO without TBB (warning parallel design can not be used anymore)
 - Providing an interface to gurobi
+- Install all files (also externals) to the include/papilo folder
 
 Known bugs
 ----------
